[gd_scene load_steps=2 format=3 uid="uid://cwwkwdgwprvdk"]

[ext_resource type="Script" path="res://scripts/ui/PortfolioUI.gd" id="1_portfolio_script"]

[node name="PortfolioUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_portfolio_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.2, 0.8)
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -280.0
offset_right = 450.0
offset_bottom = 280.0

[node name="HeaderPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
size_flags_horizontal = 3
mouse_filter = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
text = "Portfolio (Press ESC to close)"
vertical_alignment = 1

[node name="FilterOption" type="OptionButton" parent="VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.0
offset_right = 75.0
offset_bottom = 15.0



[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArtworkGrid" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="ArtworkInfoPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ArtworkInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ArtworkTitleLabel" type="Label" parent="VBoxContainer/ArtworkInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Artwork Title"

[node name="ArtworkDetailsLabel" type="Label" parent="VBoxContainer/ArtworkInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Artwork details..."
autowrap_mode = 2

[node name="ArtworkDescriptionLabel" type="Label" parent="VBoxContainer/ArtworkInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Artwork description..."
autowrap_mode = 2